chore: fix header overflow on hero widget

--- a/src/components/CreativeTextAnimation.module.css
+++ b/src/components/CreativeTextAnimation.module.css
@@ -45,6 +45,18 @@
     box-sizing: border-box; /* Ensure padding is accounted for */
   }
   
+  @media (max-width: 768px) {
+    .creativeText {
+      font-size: 1.6em;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .creativeText {
+      font-size: 1.5em;
+    }
+  }
+  
   .creativeText span {
     position: relative;
     color: grey; /* Change from var(--text-color-transparent) to black */
@@ -75,5 +87,4 @@
     color: transparent;
     animation: animate 3s linear infinite, animateText 5s ease-in-out infinite alternate;
   }
-  
   
